fix: add hidden overflow

--- a/frontend/src/shared/ui/ContentBlocks/PageWrapper/PageWrapper.module.scss
+++ b/frontend/src/shared/ui/ContentBlocks/PageWrapper/PageWrapper.module.scss
@@ -10,6 +10,8 @@
 
     position: relative;
     z-index: 2;
+
+    overflow: hidden;
 }
 
 .pageContent {
